Fix colorful cursor on mobile

--- a/src/scss/features/fancy-cursor.scss
+++ b/src/scss/features/fancy-cursor.scss
@@ -16,20 +16,16 @@
 }
 
 /* Live Preview */
-
-body:not(.is-mobile).fancy-cursor .mod-cm6 .cm-line {
+body.fancy-cursor .mod-cm6 .cm-line {
   caret-color:var(--text-accent);
 }
-body:not(.is-mobile).fancy-cursor .mod-cm6 .cm-cursor {
+body.fancy-cursor .mod-cm6 .cm-cursor {
   width:0;
   border:none;
   border-left:1px solid var(--text-accent);
 }
 body.is-mobile.fancy-cursor .mod-cm6 .cm-cursor {
   margin-left:1px;
-}
-.is-mobile.fancy-cursor .mod-cm6 .cm-line .mod-cm6 .HyperMD-task-line[data-task]:not([data-task=" "]) .task-list-item-checkbox{
-  caret-color:var(--text-accent);
 }
 
 /* Prompt */
